# kernel-hunter

./: MANIFEST.in  README.md  pyproject.toml
.kernel-hunter/: findings.sqlite
docs/: analyzers.md  configuration.md  development.md  scoring.md  tui.md
kernel_hunter/: __init__.py  services.py
kernel_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kernel_hunter/analyzers/: base.py  history.py  resource_lifetime.py  smatch.py  stubs.py
kernel_hunter/cli/: app.py
kernel_hunter/models/: __init__.py  finding.py
kernel_hunter/reports/: render.py
kernel_hunter/reports/templates/: report.html.j2
kernel_hunter/scorers/: __init__.py  confidence.py
kernel_hunter/storage/: sqlite.py
kernel_hunter/tui/: app.py
kernel_hunter/utils/: config.py  kernel.py  logging.py
rules/: README.md  resource_lifetime.toml
tests/: test_history.py  test_models_storage.py  test_reports.py  test_resource_lifetime.py  test_smatch.py
