[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-hunter"
version = "0.1.0"
description = "Linux kernel bug and patch opportunity discovery framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kernel Hunter Contributors" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "networkx>=3.3",
  "pandas>=2.2",
  "textual>=0.76",
]

[project.optional-dependencies]
c = [
  "tree-sitter>=0.22",
  "tree-sitter-c>=0.21",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
kh = "kernel_hunter.cli.app:app"

[tool.setuptools.packages.find]
include = ["kernel_hunter*"]

[tool.setuptools.package-data]
kernel_hunter = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
